--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -16,6 +16,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/checkout@v3
         with:
+          ref: main
           fetch-depth: 0
           repository: vegaprotocol/k8s
           path: k8s
