chore: use GH_TOKEN secret to clone k8s repo

--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -20,6 +20,7 @@ jobs:
           fetch-depth: 0
           repository: vegaprotocol/k8s
           path: k8s
+          token: ${{ secrets.GH_TOKEN }}
       - run: |
           
           version=$(git describe --tags --abbrev=0)
